Fix light mode alert link contrast

--- a/css/styles_override.css
+++ b/css/styles_override.css
@@ -129,3 +129,9 @@ input[type=checkbox]:checked ~ .spoiler {
         border: #343a40;
     }
 }
+
+@media (prefers-color-scheme:light) {
+    .alert-link {
+        color: #ffffff;
+    }
+}
